--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     </div>
 
     <div class="credit">
-        created by <span>team13</span> | all rights reserved!
+        created by <span>team:13</span> | all rights reserved!
     </div>
 
 </section>
